--- a/commercialProject/testPage.html
+++ b/commercialProject/testPage.html
@@ -95,15 +95,15 @@
             <p>Ответьте на 7 вопросов и получите один из трех подарков на выбор:</p>
             <div class="surprise">
                 <div class="row">
-                    <div class="col-md-2 surprise-item">
+                    <div class="col-md-2 col-4 surprise-item">
                         <img src="./img/heating.png" alt="">
                         <p>Проведение отопления</p>
                     </div>
-                    <div class="col-md-2 surprise-item">
+                    <div class="col-md-2 col-4 surprise-item">
                         <img src="./img/sewerage.png" alt="">
                         <p>Проведение отопления</p>
                     </div>
-                    <div class="col-md-2 surprise-item">
+                    <div class="col-md-2 col-4 surprise-item">
                         <img src="./img/sink.png" alt="">
                         <p>Проведение отопления</p>
                     </div>
