--- a/commercialProject/projectDmitrov.html
+++ b/commercialProject/projectDmitrov.html
@@ -117,7 +117,7 @@
                         <div class="col-md-4"><button>Посетить объект</button></div>
                     </div>
                     <div class="row">
-                        <form action="" name="zapis">
+                        <form class="col-12" action="" name="zapis">
                             <input type="text">
                             <input type="text">
                             <input type="submit" value="Хочу обсудить детали">
